force-app/main/default/objects/Survey_Response__c/Survey_Response__c.object-meta.xml
<CustomObject>
    <description>This object is used to track the Survey responses for Case, LAN, and Account.</description>
    <label>Survey Response</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Survey Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>