force-app/main/default/objects/Survey_Response__c/fields/Case_Text__c.field-meta.xml
<CustomField>
    <fullName>Case_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>