force-app/main/default/objects/Survey_Response__c/fields/Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Common Client Code. Value to come from API.</description>
    <label>Client Code</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>