force-app/main/default/objects/Survey_Response__c/fields/Client_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Client_Code_Text__c</fullName>
    <label>Client Code Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>