force-app/main/default/objects/Survey_Response__c/fields/Date_of_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Feedback__c</fullName>
    <label>Date of Feedback</label>
    <type>DateTime</type>
</CustomField>