force-app/main/default/objects/Survey_Response__c/fields/Invitation_Id__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Id__c</fullName>
    <externalId>true</externalId>
    <label>Invitation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>