force-app/main/default/objects/Survey_Response__c/fields/L1_Driver__c.field-meta.xml
<CustomField>
    <fullName>L1_Driver__c</fullName>
    <label>L1 Driver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>