force-app/main/default/objects/Survey_Response__c/fields/L2_Driver__c.field-meta.xml
<CustomField>
    <fullName>L2_Driver__c</fullName>
    <label>L2 Driver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>