force-app/main/default/objects/Survey_Response__c/fields/LAN__c.field-meta.xml
<CustomField>
    <fullName>LAN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Value to come from API.</description>
    <label>LAN</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>