force-app/main/default/objects/Survey_Response__c/fields/LAN_Text__c.field-meta.xml
<CustomField>
    <fullName>LAN_Text__c</fullName>
    <label>LAN Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>