force-app/main/default/objects/Survey_Response__c/fields/Litmus_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Litmus_Project_Name__c</fullName>
    <label>Litmus Project Name(Last Touchpoint)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>