force-app/main/default/objects/Survey_Response__c/fields/NPS_Score_Rating__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score_Rating__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Id , TEXT(Primary_Question_NPS__c), &quot;_self&quot;)</formula>
    <label>NPS Score/Rating</label>
    <type>Text</type>
</CustomField>