force-app/main/default/objects/Survey_Response__c/fields/Primary_Comment__c.field-meta.xml
<CustomField>
    <fullName>Primary_Comment__c</fullName>
    <description>Value to come from API</description>
    <inlineHelpText>Share your suggestions as to how we can better your experience</inlineHelpText>
    <label>Primary Comment</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>