force-app/main/default/objects/Survey_Response__c/fields/Primary_Question_NPS__c.field-meta.xml
<CustomField>
    <fullName>Primary_Question_NPS__c</fullName>
    <description>Survey NPS indicator in numbers, 0-10. Value to come from API.</description>
    <label>Primary Question: NPS</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>