force-app/main/default/objects/Survey_Response__c/fields/Rated_Language__c.field-meta.xml
<CustomField>
    <fullName>Rated_Language__c</fullName>
    <description>Language in which customer responded. Value to come from API.</description>
    <label>Rated Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>