force-app/main/default/objects/Survey_Response__c/fields/Rated_Medium__c.field-meta.xml
<CustomField>
    <fullName>Rated_Medium__c</fullName>
    <description>Channel - EMAIL/SMS. Value to come from API.</description>
    <label>Rated Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>