force-app/main/default/objects/Survey_Response__c/fields/Request_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Request_Datetime__c</fullName>
    <description>This field is used to stamp the survey request date-time. Value to come from API call from Litmus.</description>
    <label>Request Datetime</label>
    <type>DateTime</type>
</CustomField>