force-app/main/default/objects/Survey_Response__c/fields/Responded_on__c.field-meta.xml
<CustomField>
    <fullName>Responded_on__c</fullName>
    <description>Survey request responded by Customer. Value to come from API.</description>
    <label>Responded on</label>
    <type>DateTime</type>
</CustomField>