force-app/main/default/objects/Survey_Response__c/fields/RespondedOn__c.field-meta.xml
<CustomField>
    <fullName>RespondedOn__c</fullName>
    <label>Responded On</label>
    <length>55</length>
    <type>Text</type>
</CustomField>