force-app/main/default/objects/Survey_Response__c/fields/Sub_LOB__c.field-meta.xml
<CustomField>
    <fullName>Sub_LOB__c</fullName>
    <label>Sub LOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>