force-app/main/default/objects/Survey_Response__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>This field is used to maintain the common key for the journey requirements for litmus ABHFLspecific</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>