force-app/main/default/objects/Survey_Response__c/validationRules/NPS_Score_cannot_be_less_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>NPS_Score_cannot_be_less_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>NULLVALUE(Primary_Question_NPS__c,0) &lt; 0</errorConditionFormula>
    <errorMessage>NPS Score cannot be less than 0</errorMessage>
</ValidationRule>