force-app/main/default/objects/Survey_Response__c/validationRules/NPS_Score_cannot_be_more_than_10.validationRule-meta.xml
<ValidationRule>
    <fullName>NPS_Score_cannot_be_more_than_10</fullName>
    <active>true</active>
    <errorConditionFormula>NULLVALUE(Primary_Question_NPS__c,0) &gt; 10</errorConditionFormula>
    <errorMessage>NPS Score cannot be more than 10</errorMessage>
</ValidationRule>