force-app/main/default/objects/Survey_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>